--- a/Assignment01/Assignment01.ipynb
+++ b/Assignment01/Assignment01.ipynb
@@ -566,8 +566,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "\n",
-    "\n",
+    "#need to update and work on question 10 (a) and (d)and Q3\n",
     "\n",
     "\n"
    ]
